# jsonfix

./: CHANGELOG.md  DEBT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/jsonfix/: __init__.py  cli.py  normalizers.py  parser.py  repairs.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_combined.py  test_comments.py  test_complex_documents.py  test_edge_cases.py  test_error_handling.py  test_fuzz.py  test_llm_edge_cases.py  test_llm_extraction.py  test_llm_structural.py  test_performance.py  test_real_world.py  test_repair_log.py  test_smart_quotes.py  test_trailing_commas.py  test_v2_auto_close.py  test_v2_ellipsis.py  test_v2_newlines.py  test_v2_python_literals.py  test_v2_relaxed_compat.py  test_v2_single_quotes.py  test_v2_unquoted_keys.py  test_valid_json.py
