[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonfix"
version = "0.1.0"
description = "Parse 'almost JSON' with trailing commas, comments, smart quotes - with repair logging"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "jsonfix contributors" }]
keywords = ["json", "parser", "relaxed", "comments", "trailing-comma", "llm", "smart-quotes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/jsonfix/jsonfix"
Repository = "https://github.com/jsonfix/jsonfix"

[tool.hatch.build.targets.wheel]
packages = ["src/jsonfix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=jsonfix",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=94",
    "-v",
]
markers = [
    "slow: marks tests as slow",
    "real_world: marks real-world example tests",
]

[tool.coverage.run]
source = ["src/jsonfix"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/jsonfix"]
